cmd/cli/kubectl-kyverno/t/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp1
spec: 
  containers:
  - name: nginx
    image: nginx:1.12

---
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pods
  labels:
    app: myapp2
spec: 
  containers:
  - name: nginx
    image: nginx:1.12
